--- a/Bootstrap thing/startbootstrap-blog-post-gh-pages/from-scratch-page.html
+++ b/Bootstrap thing/startbootstrap-blog-post-gh-pages/from-scratch-page.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>From Scratch Page</title>
     <link href="css/overwrite.css" rel="stylesheet" />
 </head>
 <body class="changer">
     <h1 id="top">From-Scratch-Page </h1>
     <div class="italic">Flexing my HTML skillz</div>
-    <a href="index.html" class="">Home </a><a href="resume.html">| Resume</a><a href="contact.html">| Contact</a>
-    <div class="font1 color1 column">Not gonna lie, I have no idea what I should write in this area. So, here is a random Tableau graph and some Vsauce stuff.</div>
+    <p class="center">
+        <a href="index.html">Home </a><a href="resume.html">| Resume</a><a href="contact.html">| Contact</a>
+    </p>
+    <div class="style2">Not gonna lie, I have no idea what I should write in this area. So, here is a random Tableau graph and some Vsauce stuff.</div>
+    <div class="rightimage:before">
+        <img src="../images/vsaucemichael.jpg" height="200px">
+    </div>
+    <p>&nbsp;</p>
+    <div>Here are four different styles just to make sure I did this part. </div>
+    
+    <div class="style1">Style 1</div>
+    <div class="style2">Style 2</div>
+    <div class="style3">Style 3</div>
+    <div class="style4">Style 4</div>
     <p>&nbsp;</p>
     <div><span class="bold">Random Facts</span></div>
     <ol>
@@ -31,7 +43,7 @@
     <p>&nbsp;</p>
     <a href="#youTube"> Fun YouTube Video</a>
     <p>&nbsp;</p>
-    <div class="font1 color1">↓ Here is a random Tableau graph about something finance ↓</div>
+    <div class="style4">↓ Here is a random Tableau graph about something finance ↓</div>
     <p>&nbsp;</p>
     <div class="youTube">
         <div class='tableauPlaceholder' id='viz1702426726006' style='position: relative'><noscript><a href='#'><img alt='Exec Summary ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinanceBusinessDashboard&#47;ExecSummary&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='FinanceBusinessDashboard&#47;ExecSummary' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinanceBusinessDashboard&#47;ExecSummary&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1702426726006');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1200px';vizElement.style.height='1127px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
@@ -50,13 +62,7 @@
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <img class="images" src="../images/vsaucemichael.jpg" height="200px">
-    <div class="youTube">
+        <div class="youTube">
     <iframe id="youTube" width="560" height="315" src="https://www.youtube.com/embed/3teflb1QNN4?si=xj07OcpEKio5jlhZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="youTube"></iframe>
     </div>
     <p>&nbsp;</p>
