--- a/Bootstrap thing/startbootstrap-blog-post-gh-pages/resume.html
+++ b/Bootstrap thing/startbootstrap-blog-post-gh-pages/resume.html
@@ -139,7 +139,7 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="#" id="bottom">Resume</a></li>
                                         <li><a href="contact.html">Contact</a></li>
-                                        <li><a href="from-scratch-page.html">From Scratch</a></li>
+                                        <li><a href="from-scratch-page.html">From Scratch Page</a></li>
                                     </ul>
                                 </div>
                             </div>
